[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncplay-boot"
description = "Bootstrap of Syncplay server."
license = "MIT"
authors = [
    { name = "Dnomd343", email = "dnomd343@gmail.com" }
]

dynamic = ["version"]
requires-python = "~=3.12"
scripts.syncplay = "syncplay_boot:bootstrap"

dependencies = [
    "pyyaml>=6.0.2",
    "syncplay",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.8.2",
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "toml>=0.10.2",
]

[tool.uv.sources]
syncplay = { path = "src/syncplay" }

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "B", "N", "W"]
exclude = ["src/syncplay"]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true
include = "(src/syncplay_boot|tests)"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
pythonPlatform = "All"
include = [
  "src/syncplay_boot",
  "tests",
]

[tool.hatch.version]
path = "src/syncplay/syncplay/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/syncplay_boot"]
