[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncplay-boot"
description = "Bootstrap of Syncplay server."
license = "MIT"
authors = [
    { name = "Dnomd343", email = "dnomd343@gmail.com" }
]

dynamic = ["version"]
requires-python = "==3.12.*"
scripts.syncplay = "syncplay_boot:bootstrap"

dependencies = [
    "pyyaml>=6.0.3",
    "syncplay",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "coverage>=7.14.1",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "toml>=0.10.2",
]

[tool.uv.sources]
syncplay = { path = "src/syncplay" }

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "B", "N", "W"]
exclude = ["src/syncplay"]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true
include = "(src/syncplay_boot|tests)"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
pythonPlatform = "All"
include = [
  "src/syncplay_boot",
  "tests",
]

[tool.pytest.ini_options]
addopts = "-ra --tb=long"
testpaths = ["tests"]

[tool.coverage]
run.omit = ["tests/*"]
report.precision = 2
html.title = "Syncplay Bootstrap Coverage"

[tool.hatch.version]
path = "src/syncplay/syncplay/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/syncplay_boot"]
